fixed layout issue in services.

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 section .title {
@@ -186,7 +186,6 @@ section .title::after {
     filter: brightness(90%);
 }
 
-
 /* home section styling */
 .home {
     display: flex;
@@ -298,6 +297,7 @@ section .title::after {
     background: none;
 }
 
+
 /* services section styling */
 
 .services,
@@ -379,6 +379,7 @@ section .title::after {
 .teams .carousel .card .box {
     height: 450px;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     overflow: hidden;
     transition: all 0.3s ease;
@@ -397,19 +398,19 @@ section .title::after {
 }
 
 .teams .carousel .card .app-description{
-    text-align: left;
+    text-align: justify;;
     font-size: 15px;
 }
 
 .app-button{
-    flex-direction: column;
+    position: inherit;
     background: crimson;
     color: #fff;
-    font-size: 20px;
-    font-weight: 350;
-    padding: 10px 30px;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 5px 5px;
     margin-top: 20px;
-    border-radius: 6px;
+    border-radius: 9px;
     transition: all 0.3s ease;
 }
 
